implements to do list CRUD

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
   <body class="bg-custom-black text-custom-white">
   <%= render "layouts/navbar" %>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto px-5 flex">
       <%= yield %>
     </main>
   </body>
