--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,13 +1,21 @@
 <%= turbo_frame_tag dom_id(task), class: "w-full" do %>
-  <div class="w-full flex items-center gap-2 border-[0.3px] border-gray-200 rounded-md p-3 shadow-sm cursor-pointer hover:bg-custom-white/5 hover:scale-101 transition-all duration-300">
+  <div data-controller="task-edit" data-task-edit-id-value="<%= task.id %>" class="w-full flex justify-between items-center gap-2 border-[0.3px] border-gray-200 rounded-md p-3 shadow-sm cursor-pointer hover:bg-custom-white/5 hover:scale-101 transition-all duration-300">
 
-    <%= form_with model: task, data: { turbo_frame: dom_id(task), controller: "task" }, class: "inline-block" do |form| %>
-      <%= form.check_box :concluded,
-            { checked: task.concluded,
-              class: "w-6 h-6",
-              data: { task_target: "checkbox", action: "change->task#submit" } } %>
-    <% end %> 
+    <div class="flex items-center gap-2">
+      <%= form_with model: task, data: { turbo_frame: dom_id(task), controller: "task" }, class: "flex items-center" do |form| %>
+        <%= form.check_box :concluded,
+              { checked: task.concluded,
+                class: "w-6 h-6",
+                data: { task_target: "checkbox", action: "change->task#submit" } } %>
+      <% end %>
+      <span class="text-xl"><%= task.title %></span>
+    </div>
 
-    <span class="text-xl"><%= task.title %></span>
+   <button data-controller="task-delete" data-task-delete-id-value="<%= task.id %>" id="delete-task-btn" class="flex items-center justify-center border-none focus:outline-none text-red-300 hover:text-red-500 hover:scale-105 transition-all duration-300 cursor-pointer">
+      <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" class="fill-current">
+        <path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/>
+      </svg>
+    </button>
+
   </div>
 <% end %>
