remove forgot password view

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "New user" %>
 
-<div class="max-w-5xl mx-auto flex flex-col gap-6">
+<div class="max-w-5xl mx-auto flex flex-col gap-6 mt-5">
   <h1 class="font-bold text-4xl text-center">Sign Up</h1>
 
   <%= turbo_frame_tag "user_form" do %>
