--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user, class: "contents") do |form| %>
+<%= form_with(model: user, class: "contents", data: { turbo_frame: "_top" }) do |form| %>
     <div class="flex flex-col gap-4">
       <div class="flex flex-col gap-1">
         <%= form.label :name %>
