--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,10 +6,15 @@
   <%= render "tasks/delete_dialog" %>
   <div class="flex justify-between items-center w-full">
     <h1 class="font-medium text-4xl">TASKS</h1>
-    <button command="show-modal" commandfor="new_task_dialog" class="cursor-pointer rounded-md bg-custom-white p-2 text-sm font-semibold text-custom-black flex items-center gap-2 hover:bg-white hover:scale-105 transition-all duration-300 cursor-pointer">
-      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" class="text-custom-black"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
-      Add a new task
-    </button>
+    <div data-controller="new-task">
+      <button 
+        type="button"
+        data-action="new-task#showModal"
+        class="cursor-pointer rounded-md bg-custom-white p-2 text-sm font-semibold text-custom-black flex items-center gap-2 hover:bg-white hover:scale-105 transition-all duration-300">
+        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" class="text-custom-black"><path d="M440-440H200v-80h240v-240h80v240h240v80H520v240h-80v-240Z"/></svg>
+        Add a new task
+      </button>
+    </div>
   </div>
 
   <%= turbo_frame_tag "tasks" do %>
