--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: task, class: "contents", data: { controller: "task", task_modal_target: "form" }) do |form| %>     
     <div>
-      <div class="flex items-center gap-2">
+      <div class="flex items-center gap-2 border-b-1 border-gray-400">
         <%= form.check_box :concluded,
               include_hidden: false,
               data: { task_target: "checkbox", action: "change->task#toggle" },
@@ -9,7 +9,7 @@
                       "border-red-400 focus:outline-red-600": task.errors[:concluded].any?}] %>
 
         <%= form.text_area :title,
-              class: ["block p-2 rounded-md rounded-md mt-2 w-full focus:outline-none text-2xl font-semibold resize-none",
+              class: ["block p-2 mt-2 w-full focus:outline-none text-2xl font-semibold resize-none",
                       {"border-gray-400 focus:outline-custom-black": task.errors[:title].none?,
                       "border-red-400 focus:outline-red-600": task.errors[:title].any?}],
               placeholder: "Enter task title",
